# Bob

./: .env.example  .gitignore  CLAUDE.md  INVESTIGATION.md  README.md
Design Mockup/: .design-canvas.state.json  .thumbnail  Bob - Conscience Vivante.html  Bob - Layouts Données.html  Bob - Pistes 3D.html  Bob - Pistes Progres.html  Bob - Sphere Lab.html  agents.jsx  app.jsx  bob-progress-main.jsx  bob-shared.js  concept-base.jsx  concept-bloom.jsx  concept-orbit.jsx  concept-stream.jsx  concept-synapse.jsx  conscience-lab.jsx  conscience-life.js  conscience-shader.js  conscience.jsx  data-layouts.css  data-layouts.jsx  hud.jsx  overlay.jsx  p3d-content.jsx  p3d-core.jsx  p3d-overlay.jsx  p3d-panels.jsx  p3d-scene.jsx  p3d.css  provider.jsx  sphere-shader.js  sphere.jsx
backend/: README.md  pyproject.toml
backend/docs/: llm-tool-calling-smoke.md  task-sidebar-smoke.md
backend/prompts/: system_chat.md
backend/scripts/: bench_stt_fr.py  live_smoke_result_store.py
backend/src/bob/: __init__.py  backchannel.py  bargein.py  boot_warmup.py  chat_service.py  config.py  conversation.py  debug_log.py  debug_router.py  endpointer.py  event_bus.py  event_bus_v2.py  event_retention_policy.py  jarvis_prompt_loader.py  jarvis_store.py  latency.py  live_transcript_state.py  llm_client.py  llm_router.py  llm_selection_store.py  llm_swap.py  lm_studio_manager.py  logging_setup.py  main.py  model_budget.py  model_downloader.py  orchestrator.py  proactivity_handler.py  prompts.py  response_parser.py  rolling_summary_store.py  scheduler_policy.py  smoke.py  speculative_draft.py  speech_pipeline.py  spoken_text_cleaner.py  stt_engine.py  sub_agent_runner.py  task_completion_debouncer.py  task_scheduler.py  (+20 more)
backend/src/bob/attest/: __init__.py  assertions.py  cli.py  drive.py  ephemeral.py  fake_backend.py  runner.py
backend/src/bob/connectors/: __init__.py
backend/src/bob/connectors/gmail/: __init__.py  __main__.py  auth.py  client.py  models.py  query_builder.py
backend/src/bob/connectors/mcp/: __init__.py  adapter.py  errors.py  lifecycle.py  manager.py  models.py  projector.py  registration.py
backend/src/bob/connectors/tavily/: __init__.py  client.py  errors.py  models.py
backend/src/bob/context/: __init__.py  assembler.py  entry.py  eviction.py  policy.py  prompt_fragments.py  provider.py  recency.py  state_policy.py  summariser.py  summary_pipeline.py  tokenizer.py
backend/src/bob/context/providers/: __init__.py  cross_epoch_digest.py  legacy_full_history.py  recent_turns.py  rolling_summary.py  state_block.py  system_block.py  thinker_state.py  user_message.py
backend/src/bob/dataset/: README.md  augment.py  harvest.py
backend/src/bob/db/: __init__.py  migrations_runner.py
backend/src/bob/db/migrations/: 0001_jarvis_messages.sql  0002_tasks.sql  0003_tasks_dismissed.sql  0004_jarvis_messages_context_entry.sql  0005_tasks_lineage.sql  0006_rolling_summaries.sql  0007_epoch_id_columns.sql  0008_task_state_states.sql  0009_tasks_result_payload.sql  0010_voice_turns.sql  0011_voice_audio_blobs.sql  0012_tasks_scope.sql  0013_tasks_confidence.sql
backend/src/bob/epoch/: __init__.py  digest.py  manager.py  policy.py  retrieval.py
backend/src/bob/llm/: __init__.py  factory.py  types.py
backend/src/bob/llm/lmstudio_sdk/: __init__.py  client.py  endpoint.py  history.py  streaming.py  tools.py
backend/src/bob/llm/tooling/: __init__.py  capability.py  codec.py  hermes.py  schema.py  spec.py
backend/src/bob/streaming/: __init__.py  partial_json_parser.py  stream_emitter.py
backend/src/bob/sub_agent/: __init__.py  actions.py  activity_projector.py  addendum_queue.py  policy.py  reasoning_stream.py  result_store.py  runner.py  tool_registry.py  tool_retrieval.py
backend/src/bob/tools/: __init__.py  dispatcher.py  registry.py  types.py
backend/src/bob/tools/definitions/: __init__.py  addendum_task.py  cancel.py  cancel_task.py  forward.py  replan_task.py  say.py  show_task_result.py  spawn.py  spawn_task.py
backend/src/bob/validation/: __init__.py  envelope.py  exhausted.py  policy.py  reason_codes.py  system_validator.py
backend/tests/: conftest.py  test_activity_projector.py  test_attest_assertions.py  test_attest_audio.py  test_attest_backchannel.py  test_attest_bargein.py  test_attest_budget.py  test_attest_cli.py  test_attest_ephemeral.py  test_attest_fake_backend.py  test_attest_fsm.py  test_attest_role_used_model.py  test_attest_runner.py  test_attest_thinker.py  test_backchannel.py  test_bargein.py  test_boot_warmup.py  test_bounded_policy_golden.py  test_bounded_policy_long_session.py  test_bounded_v2_with_state_golden.py  test_chat_service.py  test_config.py  test_context_assembler.py  test_context_entry.py  test_context_orchestrator_integration.py  test_context_policy.py  test_conversation.py  test_cors.py  test_debug_log.py  test_debug_sink_gating.py  test_endpointer.py  test_epoch_digest.py  test_epoch_manager.py  test_event_bus.py  test_event_bus_v2.py  test_event_retention.py  test_eviction_strategy.py  test_fake_tts_service.py  test_gmail_projector.py  test_gmail_search_branches.py  (+109 more)
backend/tests/_harness/: __init__.py  fake_llm.py  golden_prompt.py  virtual_clock.py
backend/tests/connectors/gmail/: test_gmail_auth.py  test_gmail_client.py  test_gmail_models.py  test_gmail_query_builder.py
backend/tests/connectors/mcp/: _echo_server.py  test_mcp_lifecycle.py  test_mcp_manager.py  test_mcp_models.py  test_mcp_transport.py
backend/tests/connectors/tavily/: test_tavily_client.py  test_tavily_models.py
backend/tests/fixtures/: __init__.py  tool_calling.py
backend/tests/fixtures/prompts/: bounded_simple.snapshot.json  bounded_simple.transcript.json  bounded_v2_with_digest.snapshot.json  bounded_v2_with_state.snapshot.json  bounded_v2_with_state.transcript.json  bounded_with_summary.snapshot.json  bounded_with_summary.transcript.json  thinker_state_block.snapshot.json
frontend/: .npmrc  (+7 more)
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: aec_spike.rs  lib.rs
(+357 files in other folders)
