[project]
name = "bob-backend"
version = "0.1.0"
description = "Bob personal AI assistant backend"
readme = "README.md"
authors = [
    { name = "Tom Kubasik", email = "tom.kubasik@lunabee.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "openai>=1.54",
    "jsonschema>=4.23",
    "kokoro>=0.9.4",
    "misaki[fr]>=0.9.4",
    "numpy>=2.0",
    "torch>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bob"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["kokoro.*", "misaki.*", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
