[project]
name = "bob-backend"
version = "0.1.0"
description = "Bob personal AI assistant backend"
readme = "README.md"
authors = [
    { name = "Tom Kubasik", email = "tom.kubasik@lunabee.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "openai>=1.54",
    "jsonschema>=4.23",
    "kokoro>=0.9.4",
    "misaki[fr]>=0.9.4",
    "numpy>=2.0",
    "torch>=2.4",
    "partial-json-parser>=0.2.1.1.post7",
    "google-auth>=2.36",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.150",
    # Pinned to a single minor (PRD 0017 / issue 0114): the M6
    # ``BobChatResponseEndpoint`` override (bob/llm/lmstudio_sdk/endpoint.py)
    # depends on the SDK's PRIVATE prediction-event wire shape. A minor bump
    # could rename the dropped ``toolCallGenerationArgumentFragmentGenerated``
    # message / its ``content`` key / reintegrate it — the contract guard test
    # catches that, and this pin keeps the resolved version intentional.
    "lmstudio>=1.5.0,<1.6",
    "httpx>=0.27",
    "mcp>=1.27.2",
    # Attestation harness (PRD 0016 / issue 0098). ``pyyaml`` parses scenario
    # files; ``websockets`` is the black-box WS client the drive layer uses to
    # hit the real ``/ws/chat`` + ``/ws/debug`` of the ephemeral backend. Both
    # already resolve transitively (uvicorn[standard] ships websockets) — pinned
    # here as direct deps because the ``bob`` CLI imports them directly.
    "pyyaml>=6.0",
    "websockets>=13.0",
]

[project.scripts]
# Greenfield ``bob`` CLI — the attestation harness front door (issue 0098).
bob = "bob.attest.cli:main"

# Optional speech-to-text engine (PRD 0016 / issue 0099). whisper.cpp via
# pywhispercpp backs the real « Listen » STT engine on Apple Silicon
# (Metal/CoreML). Kept OPTIONAL so the backend boots and the suite passes
# without the native binding: the default engine lazy-loads it on first mic
# frame, and tests/attest scenarios drive a deterministic fake engine behind
# the same interface. Install with ``uv sync --extra stt``.
[project.optional-dependencies]
stt = [
    "pywhispercpp>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    # Type stubs for the harness' YAML parsing (issue 0098).
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "bob"
module-root = "src"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["kokoro.*", "misaki.*", "torch.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["partial_json_parser.*"]
ignore_missing_imports = true

# Optional native STT extra (``uv sync --extra stt``): the module may or may
# not be importable depending on the env — an override keeps mypy green in
# both, where an inline ``type: ignore`` flips to unused when it IS installed.
[[tool.mypy.overrides]]
module = ["pywhispercpp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "google.auth.*",
    "google.oauth2.*",
    "google_auth_oauthlib.*",
    "googleapiclient.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: opt-in tests that need native deps / models (e.g. whisper.cpp); skipped in default CI",
]
